opam-version: "1.2"
name: "secp256k1-internal"
version: "0.1"
authors: "Vincent Bernardoff <vb@luminar.eu.org>"
maintainer: "Vincent Bernardoff <vb@luminar.eu.org>"
homepage: "https://github.com/vbmithr/ocaml-secp256k1-internal"
bug-reports: "https://github.com/vbmithr/ocaml-secp256k1-internal/issues"
dev-repo: "git://github.com/vbmithr/ocaml-secp256k1-internal"

available: [
  ocaml-version >= "4.00.0"
]

build: [ "jbuilder" "build" "-j" jobs "-p" name "@install" ]
depends: [
  "jbuilder" {build & >= "1.0+beta14"}
  "cstruct" {>= "3.1.1"}
]
